chore: Update dependencies/LATEST_IMAGES, COMMITS, DIGESTS, INDEXES, BUILD_TIMES
Signed-off-by: devstudio-release <nickboldt+devstudio-release@gmail.com>

--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -6235,3 +6235,48 @@
   timeWait: 0 mins
   timeBuild: 4 mins
   timeTotal: 4 mins
+- name: devspaces-machineexec-rhel8
+  tag: 3.11-13
+  taskId: 57552808
+  timeCreate: Tue Dec 12 14:23:37 2023
+  timeStart: Tue Dec 12 14:24:16 2023
+  timeFinish: Tue Dec 12 14:31:11 2023
+  timeWait: 0 mins
+  timeBuild: 6 mins
+  timeTotal: 7 mins
+- name: devspaces-configbump-rhel8
+  tag: 3.11-9
+  taskId: 57552877
+  timeCreate: Tue Dec 12 14:24:43 2023
+  timeStart: Tue Dec 12 14:25:08 2023
+  timeFinish: Tue Dec 12 14:38:59 2023
+  timeWait: 0 mins
+  timeBuild: 13 mins
+  timeTotal: 14 mins
+- name: devspaces-server-rhel8
+  tag: 3.11-23
+  taskId: 57553250
+  timeCreate: Tue Dec 12 14:30:33 2023
+  timeStart: Tue Dec 12 14:30:56 2023
+  timeFinish: Tue Dec 12 14:40:04 2023
+  timeWait: 0 mins
+  timeBuild: 9 mins
+  timeTotal: 9 mins
+- name: devspaces-idea-rhel8
+  tag: 3.11-7
+  taskId: 57554094
+  timeCreate: Tue Dec 12 14:38:45 2023
+  timeStart: Tue Dec 12 14:42:01 2023
+  timeFinish: Tue Dec 12 14:59:01 2023
+  timeWait: 3 mins
+  timeBuild: 17 mins
+  timeTotal: 20 mins
+- name: devspaces-operator-bundle
+  tag: 3.11-153
+  taskId: 57554836
+  timeCreate: Tue Dec 12 14:51:50 2023
+  timeStart: Tue Dec 12 14:52:14 2023
+  timeFinish: Tue Dec 12 14:55:19 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
