--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -6127,3 +6127,120 @@
   timeWait: 0 mins
   timeBuild: 4 mins
   timeTotal: 5 mins
+- name: devspaces-machineexec-rhel8
+  tag: 3.12-2
+  taskId: 57499479
+  timeCreate: Sun Dec 10 08:53:14 2023
+  timeStart: Sun Dec 10 08:53:22 2023
+  timeFinish: Sun Dec 10 08:59:06 2023
+  timeWait: 0 mins
+  timeBuild: 5 mins
+  timeTotal: 5 mins
+- name: devspaces-configbump-rhel8
+  tag: 3.12-2
+  taskId: 57499480
+  timeCreate: Sun Dec 10 08:53:36 2023
+  timeStart: Sun Dec 10 08:54:09 2023
+  timeFinish: Sun Dec 10 09:06:39 2023
+  timeWait: 0 mins
+  timeBuild: 12 mins
+  timeTotal: 13 mins
+- name: devspaces-imagepuller-rhel8
+  tag: 3.12-3
+  taskId: 57499481
+  timeCreate: Sun Dec 10 08:53:36 2023
+  timeStart: Sun Dec 10 08:54:10 2023
+  timeFinish: Sun Dec 10 09:06:54 2023
+  timeWait: 0 mins
+  timeBuild: 12 mins
+  timeTotal: 13 mins
+- name: devspaces-udi-rhel8
+  tag: 3.12-3
+  taskId: 57499482
+  timeCreate: Sun Dec 10 08:54:07 2023
+  timeStart: Sun Dec 10 08:54:11 2023
+  timeFinish: Sun Dec 10 09:47:53 2023
+  timeWait: 0 mins
+  timeBuild: 53 mins
+  timeTotal: 53 mins
+- name: devspaces-operator
+  tag: 3.12-2
+  taskId: 57499486
+  timeCreate: Sun Dec 10 08:55:17 2023
+  timeStart: Sun Dec 10 08:55:45 2023
+  timeFinish: Sun Dec 10 09:10:47 2023
+  timeWait: 0 mins
+  timeBuild: 15 mins
+  timeTotal: 15 mins
+- name: devspaces-pluginregistry-rhel8
+  tag: 3.12-3
+  taskId: 57499536
+  timeCreate: Sun Dec 10 09:13:49 2023
+  timeStart: Sun Dec 10 09:14:05 2023
+  timeFinish: Sun Dec 10 09:47:18 2023
+  timeWait: 0 mins
+  timeBuild: 33 mins
+  timeTotal: 33 mins
+- name: devspaces-idea-rhel8
+  tag: 3.12-2
+  taskId: 57499710
+  timeCreate: Sun Dec 10 10:16:55 2023
+  timeStart: Sun Dec 10 10:17:23 2023
+  timeFinish: Sun Dec 10 10:32:12 2023
+  timeWait: 0 mins
+  timeBuild: 14 mins
+  timeTotal: 15 mins
+- name: devspaces-server-rhel8
+  tag: 3.12-4
+  taskId: 57517043
+  timeCreate: Mon Dec 11 14:21:28 2023
+  timeStart: Mon Dec 11 14:22:13 2023
+  timeFinish: Mon Dec 11 14:30:54 2023
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 9 mins
+- name: devspaces-traefik-rhel8
+  tag: 3.12-4
+  taskId: 57521120
+  timeCreate: Mon Dec 11 17:11:30 2023
+  timeStart: Mon Dec 11 17:12:06 2023
+  timeFinish: Mon Dec 11 17:38:43 2023
+  timeWait: 0 mins
+  timeBuild: 26 mins
+  timeTotal: 27 mins
+- name: devspaces-dashboard-rhel8
+  tag: 3.12-5
+  taskId: 57532042
+  timeCreate: Tue Dec 12 08:20:51 2023
+  timeStart: Tue Dec 12 08:21:05 2023
+  timeFinish: Tue Dec 12 08:45:04 2023
+  timeWait: 0 mins
+  timeBuild: 23 mins
+  timeTotal: 24 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.12-9
+  taskId: 57558508
+  timeCreate: Tue Dec 12 22:31:54 2023
+  timeStart: Tue Dec 12 22:32:00 2023
+  timeFinish: Tue Dec 12 22:41:33 2023
+  timeWait: 0 mins
+  timeBuild: 9 mins
+  timeTotal: 9 mins
+- name: devspaces-code-rhel8
+  tag: 3.12-4
+  taskId: 57584256
+  timeCreate: Wed Dec 13 13:27:00 2023
+  timeStart: Wed Dec 13 13:27:20 2023
+  timeFinish: Wed Dec 13 15:16:47 2023
+  timeWait: 0 mins
+  timeBuild: 109 mins
+  timeTotal: 109 mins
+- name: devspaces-operator-bundle
+  tag: 3.12-1
+  taskId: 57586907
+  timeCreate: Wed Dec 13 15:05:10 2023
+  timeStart: Wed Dec 13 15:05:29 2023
+  timeFinish: Wed Dec 13 15:09:09 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
