--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -6406,3 +6406,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-code-rhel8
+  tag: 3.12-13
+  taskId: 57648054
+  timeCreate: Fri Dec 15 02:16:01 2023
+  timeStart: Fri Dec 15 02:16:15 2023
+  timeFinish: Fri Dec 15 04:01:39 2023
+  timeWait: 0 mins
+  timeBuild: 105 mins
+  timeTotal: 105 mins
+- name: devspaces-operator-bundle
+  tag: 3.12-10
+  taskId: 57649895
+  timeCreate: Fri Dec 15 04:08:25 2023
+  timeStart: Fri Dec 15 04:08:28 2023
+  timeFinish: Fri Dec 15 04:12:41 2023
+  timeWait: 0 mins
+  timeBuild: 4 mins
+  timeTotal: 4 mins
