--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -6640,6 +6640,15 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-code-rhel8
+  tag: 3.12-20
+  taskId: 57682110
+  timeCreate: Sun Dec 17 04:55:35 2023
+  timeStart: Sun Dec 17 04:56:08 2023
+  timeFinish: Sun Dec 17 06:44:01 2023
+  timeWait: 0 mins
+  timeBuild: 107 mins
+  timeTotal: 108 mins
 - name: devspaces-operator-bundle
   tag: 3.12-19
   taskId: 57682157
@@ -6649,3 +6658,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 4 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.12-13
+  taskId: 57682192
+  timeCreate: Sun Dec 17 05:41:53 2023
+  timeStart: Sun Dec 17 05:42:29 2023
+  timeFinish: Sun Dec 17 05:53:04 2023
+  timeWait: 0 mins
+  timeBuild: 10 mins
+  timeTotal: 11 mins
+- name: devspaces-operator-bundle
+  tag: 3.12-20
+  taskId: 57682559
+  timeCreate: Sun Dec 17 06:52:06 2023
+  timeStart: Sun Dec 17 06:52:09 2023
+  timeFinish: Sun Dec 17 06:55:18 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
