--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -6712,3 +6712,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.12-14
+  taskId: 57684869
+  timeCreate: Sun Dec 17 22:24:02 2023
+  timeStart: Sun Dec 17 22:24:45 2023
+  timeFinish: Sun Dec 17 22:35:02 2023
+  timeWait: 0 mins
+  timeBuild: 10 mins
+  timeTotal: 11 mins
+- name: devspaces-operator-bundle
+  tag: 3.12-23
+  taskId: 57684906
+  timeCreate: Sun Dec 17 22:41:31 2023
+  timeStart: Sun Dec 17 22:42:13 2023
+  timeFinish: Sun Dec 17 22:45:10 2023
+  timeWait: 0 mins
+  timeBuild: 2 mins
+  timeTotal: 3 mins
