--- a/dependencies/job-config.json
+++ b/dependencies/job-config.json
@@ -535,12 +535,12 @@
         "CSV_VERSION_PREV": "3.8.0"
       },
       "3.10": {
-        "CSV_VERSION": "3.10.0",
-        "CSV_VERSION_PREV": "3.8.0"
+        "CSV_VERSION": "3.10.1",
+        "CSV_VERSION_PREV": "3.10.0"
       },
       "3.x": {
-        "CSV_VERSION": "3.10.0",
-        "CSV_VERSION_PREV": "3.8.0"
+        "CSV_VERSION": "3.12.0",
+        "CSV_VERSION_PREV": "3.10.0"
       }
     }
   },
@@ -548,13 +548,13 @@
     "Errata": {
       "3.8": "116894",
       "3.9": "119896",
-      "3.10": "n/a",
+      "3.10": "125617",
       "3.x": "n/a"
     },
     "Epic": {
       "3.8": "CRW-4586",
       "3.9": "CRW-4828",
-      "3.10": "n/a",
+      "3.10": "CRW-5409",
       "3.x": "n/a"
     },
     "FLOATING_QUAY_TAGS": {
@@ -607,7 +607,7 @@
     "@eclipse-che/plugin-registry-generator": {
       "3.8": "7.72.0",
       "3.9": "next",
-      "3.10": "next",
+      "3.10": "7.76.0",
       "3.x": "next"
     },
     "OPENSHIFT_VERSIONS_SUPPORTED": {
