--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -6802,3 +6802,30 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 4 mins
+- name: devspaces-code-rhel8
+  tag: 3.12-25
+  taskId: 57704856
+  timeCreate: Mon Dec 18 21:14:03 2023
+  timeStart: Mon Dec 18 21:14:36 2023
+  timeFinish: Mon Dec 18 22:55:21 2023
+  timeWait: 0 mins
+  timeBuild: 100 mins
+  timeTotal: 101 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.12-15
+  taskId: 57706113
+  timeCreate: Mon Dec 18 22:34:06 2023
+  timeStart: Mon Dec 18 22:34:06 2023
+  timeFinish: Mon Dec 18 22:42:52 2023
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 8 mins
+- name: devspaces-operator-bundle
+  tag: 3.12-28
+  taskId: 57706405
+  timeCreate: Mon Dec 18 23:03:51 2023
+  timeStart: Mon Dec 18 23:03:51 2023
+  timeFinish: Mon Dec 18 23:08:15 2023
+  timeWait: 0 mins
+  timeBuild: 4 mins
+  timeTotal: 4 mins
