--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -6847,3 +6847,30 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-pluginregistry-rhel8
+  tag: 3.12-5
+  taskId: 57714366
+  timeCreate: Tue Dec 19 12:01:58 2023
+  timeStart: Tue Dec 19 12:02:32 2023
+  timeFinish: Tue Dec 19 12:26:31 2023
+  timeWait: 0 mins
+  timeBuild: 23 mins
+  timeTotal: 24 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.12-16
+  taskId: 57714892
+  timeCreate: Tue Dec 19 12:23:22 2023
+  timeStart: Tue Dec 19 12:23:58 2023
+  timeFinish: Tue Dec 19 12:32:44 2023
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 9 mins
+- name: devspaces-operator-bundle
+  tag: 3.12-30
+  taskId: 57715542
+  timeCreate: Tue Dec 19 12:47:28 2023
+  timeStart: Tue Dec 19 12:47:47 2023
+  timeFinish: Tue Dec 19 12:51:17 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
