--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -6892,3 +6892,21 @@
   timeWait: 0 mins
   timeBuild: 2 mins
   timeTotal: 3 mins
+- name: devspaces-code-rhel8
+  tag: 3.12-27
+  taskId: 57718025
+  timeCreate: Tue Dec 19 09:20:42 2023
+  timeStart: Tue Dec 19 09:21:17 2023
+  timeFinish: Tue Dec 19 11:19:39 2023
+  timeWait: 0 mins
+  timeBuild: 118 mins
+  timeTotal: 118 mins
+- name: devspaces-operator-bundle
+  tag: 3.12-32
+  taskId: 57721151
+  timeCreate: Tue Dec 19 11:27:45 2023
+  timeStart: Tue Dec 19 11:28:05 2023
+  timeFinish: Tue Dec 19 11:32:07 2023
+  timeWait: 0 mins
+  timeBuild: 4 mins
+  timeTotal: 4 mins
