--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -6910,3 +6910,30 @@
   timeWait: 0 mins
   timeBuild: 4 mins
   timeTotal: 4 mins
+- name: devspaces-code-rhel8
+  tag: 3.12-28
+  taskId: 57726030
+  timeCreate: Tue Dec 19 21:09:23 2023
+  timeStart: Tue Dec 19 21:09:59 2023
+  timeFinish: Tue Dec 19 22:47:26 2023
+  timeWait: 0 mins
+  timeBuild: 97 mins
+  timeTotal: 98 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.12-18
+  taskId: 57726380
+  timeCreate: Tue Dec 19 22:27:54 2023
+  timeStart: Tue Dec 19 22:28:11 2023
+  timeFinish: Tue Dec 19 22:38:25 2023
+  timeWait: 0 mins
+  timeBuild: 10 mins
+  timeTotal: 10 mins
+- name: devspaces-operator-bundle
+  tag: 3.12-33
+  taskId: 57726565
+  timeCreate: Tue Dec 19 22:54:51 2023
+  timeStart: Tue Dec 19 22:55:31 2023
+  timeFinish: Tue Dec 19 22:58:51 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 4 mins
