--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -6955,3 +6955,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 4 mins
+- name: devspaces-server-rhel8
+  tag: 3.12-6
+  taskId: 57737120
+  timeCreate: Wed Dec 20 13:45:12 2023
+  timeStart: Wed Dec 20 13:45:33 2023
+  timeFinish: Wed Dec 20 13:53:39 2023
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 8 mins
+- name: devspaces-operator-bundle
+  tag: 3.12-35
+  taskId: 57737812
+  timeCreate: Wed Dec 20 14:19:22 2023
+  timeStart: Wed Dec 20 14:19:44 2023
+  timeFinish: Wed Dec 20 14:22:57 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
