--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -7009,6 +7009,15 @@
   timeWait: 0 mins
   timeBuild: 5 mins
   timeTotal: 6 mins
+- name: devspaces-code-rhel8
+  tag: 3.12-31
+  taskId: 57739980
+  timeCreate: Wed Dec 20 10:54:34 2023
+  timeStart: Wed Dec 20 10:55:06 2023
+  timeFinish: Wed Dec 20 12:42:45 2023
+  timeWait: 0 mins
+  timeBuild: 107 mins
+  timeTotal: 108 mins
 - name: devspaces-operator-bundle
   tag: 3.12-37
   taskId: 57740137
@@ -7018,3 +7027,12 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 4 mins
+- name: devspaces-operator-bundle
+  tag: 3.12-38
+  taskId: 57743005
+  timeCreate: Wed Dec 20 12:50:03 2023
+  timeStart: Wed Dec 20 12:50:17 2023
+  timeFinish: Wed Dec 20 12:53:43 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
